assets/stylesheets/layout/_header.scss
.container {
  @include container;
}

.main-header {
  position: relative;

  display: flex;

  flex-direction: column;

  justify-content: center;

  padding: 1rem 0;
  margin-top: 0;

  background-color: palette('dark-blue-grey');
  box-shadow: 0 4px 20px 0 palette('shadow');

  @media screen and (min-width: breakpoint('tablet')) {
    flex-direction: row;
  }
}


.main-header .container {
  display: flex;

  align-items: center;

  width: 100%;
}

.main-nav {
  position: relative;

  @media screen and (min-width: breakpoint('tablet')) {
    order: 2;
  }
}

.menu {
  position: fixed;
  top: -100%;
  left: 0;
  z-index: 2;

  order: 2;

  width: 100%;
  padding: 0;
  margin: 0;

  text-align: center;
  list-style: none;

  background-color: palette('dark-blue-grey');

  transition: top 0.3s;

  @media screen and (min-width: breakpoint('tablet')) {
    position: relative;
    top: auto;

    display: flex;

    text-align: left;
  }
}

.menu.active {
  top: 4.5rem;

  @media screen and (min-width: breakpoint('tablet')) {
    top: auto;
  }
}

.menu a {
  display: block;

  padding-bottom: 1rem;

  color: palette('white');
  text-decoration: none;
  text-transform: uppercase;

  @media screen and (min-width: breakpoint('tablet')) {
    padding-bottom: 0;
    margin-left: 1rem;

    font-size: ms(-1);
  }

  @media screen and (min-width: breakpoint('desktop')) {
    margin-left: 2.8rem;

    font-size: ms(0);
  }

  @media screen and (min-width: breakpoint('wide')) {
    margin-left: 4rem;
  }
}

.menu .active a {
  @media screen and (min-width: breakpoint('tablet')) {
    border-bottom: 2px solid palette('blue', 'greeny');
  }
}

.menu__toggle {
  position: relative;
  z-index: layer('modal');

  width: 2.19rem;
  padding: 0.3rem;
  margin: 0;

  background-color: transparent;
  border: 0;

  @media screen and (min-width: breakpoint('tablet')) {
    display: none;
  }
}

.menu__toggle span {
  display: block;

  width: 100%;
  height: 0.188rem;
  margin-bottom: 0.2rem;

  background-color: palette('white');
  border-radius: 3px;

  &:last-child {
    margin-bottom: 0;
  }
}


.main-header__logo {
  @include image-replacement;

  display: block;

  width: 17rem;
  height: 2.5rem;
  margin: 0 auto;

  background-image: image('logos/logo.svg');
  background-position: center;
  background-size: contain;

  @media screen and (min-width: breakpoint('tablet')) {
    width: 12rem;
    height: 3.2rem;
    margin-right: auto;
    margin-left: 0;
  }

  @media screen and (min-width: breakpoint('desktop')) {
    width: 18rem;
  }

  @media screen and (min-width: breakpoint('wide')) {
    width: 20rem;
  }
}

